<resources>
    <string name="app_name">CalculatorSecond</string>

    <string name="text1">0</string>
    <string name="text2">0</string>

    <string name="button0">0</string>
    <string name="button1">1</string>
    <string name="button2">2</string>
    <string name="button3">3</string>
    <string name="button4">4</string>
    <string name="button5">5</string>
    <string name="button6">6</string>
    <string name="button7">7</string>
    <string name="button8">8</string>
    <string name="button9">9</string>

    <string name="buttonPercent">%</string>
    <string name="buttonShares">/</string>
    <string name="buttonMultiply">*</string>
    <string name="buttonEquals">=</string>
    <string name="buttonPoint">.</string>
    <string name="buttonBracket">(</string>
    <string name="buttonPlus">+</string>
    <string name="buttonMinus">-</string>
    <string name="buttonSecondBracket">)</string>
    <string name="buttonReset">Clear</string>
    <string name="buttonDelete">del.</string>
</resources>